2003-03-20	fabian
    * Japanese localization patch from Yuichi OHKAWA
    * Imported all the website files into the project
    * New key combination for scrolling:
        cmd-Up/Down arrow: scroll one line up/down
        shift-cmd-Up/Down arrow: scroll one pague up/down
    * Added an alert window after configuration is saved.
    * Added shortcut option for address entry.
        Control-Option-Key: Open in new tab
        Shift-Control-Option-Key: Open in new window
      (not working when some input method is being used)
    
2003-03-19	fabian
    * Fixed some AddressBook interface issues
    * Corrected typos in Korean localizations
    * Updated help files
    * finalize the release of 0.6.5
    
2003-03-18	fabian
    * Added Korean localization provided by TaeYoung Oh
    * Updated Chinese nib files for new option.

2003-03-18	Ujwal S. Sathyam <ujwal@setlurgroup.com>
    * Added explicit preference to warn on quitting 
      or closing a window/tab.
      
2003-03-14	fabian
    * Decrease the brightness of default color to give it
      more contrast to the highlight
    * Fixed a bug related to input CJK.
    * Updated Japanese nib files by Yuichi OHKAWA
    * Added a screen lock to prevent conflicting update.
    * Fixed a bug in dead key processing
      
2003-03-13	fabian
    * Added a new option to allow opening the address book
      window when startup.
    * Change version number to 0.6.5
    * Localized GPL license statement for zh_CN and zn_TW
    * Fixed a bug in PseudoTerminal.nib, zh_TW
    * Cleaned up unused outlets in PseudoTerminal
    * Changed Address Book behavior:
        double click opens a new session
        new window is specified using a switch
    * Correct the yellow
        
2003-03-12	fabian
    * Fixed a bug that causes incorrect process of color.
    * Cleaned up the color code
    * Fixed a bug related to reversed video mode.
    * Changed default black color to pure black.
    * Fixed some timer settings
    